<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- untitled strings -->

	<string name="app_name">Nutrients tracker App</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="start_tracking_string">Start Tracking</string>
	<string name="let_s_join_our_community_to_track_nutrients_in_your_food__string">Lets join our communityto track nutrients in your food!</string>
	<string name="signup_string">SIGNUP</string>
	<string name="login_string">LOGIN</string>
	<string name="time_string">9:41</string>
	<string name="email_or_username_string">Email or  Username</string>
	<string name="password_string">Password</string>
	<string name="login_ek1_string">Login</string>
	<string name="_sign_up_ek2_string">Sign Up</string>
	<string name="back_string">Back</string>
	<string name="don_t_have_any_account__string">Dont have any account?</string>
	<string name="welcome_back__string">Welcome Back!</string>
	<string name="please_enter_your_account_here_string">Please enter your account here</string>
	<string name="time_ek1_string">9:41</string>
	<string name="phone_number_string">Phone number</string>
	<string name="name_string">Name</string>
	<string name="username_string">Username</string>
	<string name="sign_up_ek6_string">Sign up</string>
	<string name="email_address_string">Email Address</string>
	<string name="password_ek1_string">Password</string>
	<string name="female_ek1_string">Female</string>
	<string name="male_ek1_string">Male</string>
	<string name="welcome__string">Welcome!</string>
	<string name="sign_up_ek7_string">SIGN UP</string>
	<string name="time_ek2_string">9:41</string>
	<string name="phone_number_ek1_string">Phone number</string>
	<string name="name_ek1_string">Name</string>
	<string name="username_ek1_string">Username</string>
	<string name="sign_up_ek8_string">Sign up</string>
	<string name="email_address_ek1_string">Email Address</string>
	<string name="password_ek2_string">Password</string>
	<string name="female_ek3_string">Female</string>
	<string name="male_ek3_string">Male</string>
	<string name="welcome__ek1_string">Welcome!</string>
	<string name="sign_up_ek9_string">SIGN UP</string>
	<string name="time_ek3_string">9:41</string>
	<string name="sign_up_success_string">Sign UP Success</string>
	<string name="your_recipe_has_been_uploaded__you_can_see_it_on_your_profile_string">Your are ready,You can try our app now</string>
	<string name="default_string">Go To  Home</string>
	<string name="home_string">Home</string>
	<string name="hello_taylor__string">Hello Taylor,</string>
	<string name="home_ek1_string">HOME</string>
	<string name="let_s_learn_more_about_your_food_string">Lets Learn More About Your FOOD</string>
	<string name="search__string">Search for ...</string>
	<string name="track_nutrients_foreach_component_in_your_food_string">Track Nutrients foreach component in your food</string>
	<string name="food_camera_string">FOOD CAMERA</string>
	<string name="share_your_own_recipe_and_its_nutrients_facts_with_your_followers_string">Share your own recipe and its nutrients facts with your followers</string>
	<string name="add_recipe_string">ADD RECIPE</string>
	<string name="_9_41_string">9:41</string>
	<string name="home_ek3_string">Home</string>
	<string name="hello_taylor__ek1_string">Hello Taylor,</string>
	<string name="home_ek4_string">HOME</string>
	<string name="let_s_learn_more_about_your_food_ek1_string">Lets Learn More About Your FOOD</string>
	<string name="search__ek1_string">Search for ...</string>
	<string name="share_your_own_recipe_and_its_nutrients_facts_with_your_followers_ek1_string">Share your own recipe and its nutrients facts with your followers</string>
	<string name="add_recipe_ek1_string">ADD RECIPE</string>
	<string name="track_nutrients_foreach_component_in_your_food_ek1_string">Track Nutrients foreach component in your food</string>
	<string name="food_camera_ek1_string">FOOD CAMERA</string>
	<string name="allow_to_take_pictures__string">Allow to take pictures?</string>
	<string name="deny_string">DENY</string>
	<string name="allow_string">ALLOW</string>
	<string name="_9_41_ek1_string">9:41</string>
	<string name="pancake_string">Pancake</string>
	<string name="pancake_ek1_string">Pancake</string>
	<string name="food_string">Food</string>
	<string name="__60_mins_string">>60 mins</string>
	<string name="salad_string">Salad</string>
	<string name="salad_ek1_string">Salad</string>
	<string name="food_ek1_string">Food</string>
	<string name="__60_mins_ek1_string">>60 mins</string>
	<string name="elena_shelby_string"> Taylor Shelby</string>
	<string name="recipes_string">Recipes</string>
	<string name="tabs___default_string">Favorites</string>
	<string name="__tayshelby_string">@TayShelby</string>
	<string name="time_ek4_string">9:41</string>
	<string name="pancake_ek2_string">Pancake</string>
	<string name="food_ek2_string">Food</string>
	<string name="__60_mins_ek2_string">>60 mins</string>
	<string name="pancake_ek3_string">Pancake</string>
	<string name="food_ek3_string">Food</string>
	<string name="__60_mins_ek3_string">>60 mins</string>
	<string name="salad_ek2_string">Salad</string>
	<string name="food_ek4_string">Food</string>
	<string name="__60_mins_ek4_string">>60 mins</string>
	<string name="__tayshelby_ek1_string">@TayShelby</string>
	<string name="salad_ek3_string">Salad</string>
	<string name="food_ek5_string">Food</string>
	<string name="__60_mins_ek5_string">>60 mins</string>
	<string name="taylor_shelby_string">Taylor Shelby</string>
	<string name="recipes_ek1_string">Recipes</string>
	<string name="tabs___default_ek1_string">Favorites</string>
	<string name="edit_profile_string">EDIT PROFILE</string>
	<string name="_logout_string">LOGOUT</string>
	<string name="time_ek5_string">9:41</string>
	<string name="identify_meals_string">Identify Meals</string>
	<string name="you_can_identify_your_food_and_its_ingredients_through_your_camera_string">You can identify your food and its ingredients through your camera</string>
	<string name="signup_ek1_string">SIGNUP</string>
	<string name="login_ek2_string">LOGIN</string>
	<string name="time_ek6_string">9:41</string>
	<string name="track_nutrients_string">Track Nutrients</string>
	<string name="let_s_track_the_many_nutrition_facts_that_exist_in_this_meal_string">Lets track the many nutrition facts that exist in this meal</string>
	<string name="signup_ek2_string">SIGNUP</string>
	<string name="login_ek3_string">LOGIN</string>
	<string name="time_ek7_string">9:41</string>
	<string name="username_ek2_string">Username</string>
	<string name="email_address_ek2_string">Email Address</string>
	<string name="phonenumber_string">Phonenumber</string>
	<string name="password_ek3_string">Password</string>
	<string name="change_profile_photo_string">Change profile photo</string>
	<string name="__________string"></string>
	<string name="taylorswift_gmail_com_string">Taylorswift@gmail.com</string>
	<string name="_011_________string">011********</string>
	<string name="tayshelby_string">TayShelby</string>
	<string name="edit_profile_ek4_string">Edit Profile</string>
	<string name="name_ek2_string">Name</string>
	<string name="taylor_shelby_ek1_string">Taylor Shelby</string>
	<string name="time_ek8_string">9:41</string>
	<string name="elena_shelby_ek1_string"> Taylor Shelby</string>
	<string name="__tayshelby_ek2_string">@TayShelby</string>
	<string name="recipes_ek2_string">Recipes</string>
	<string name="tabs___default_ek2_string">Favorites</string>
	<string name="fruites_string">fruites</string>
	<string name="cacao_maca_walnut_milk_string">Cacao Maca Walnut Milk</string>
	<string name="time_ek9_string">9:41</string>
</resources>