<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="match_parent" >
	<ScrollView android:id="@+id/scroll"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:background="#ffffff">
	<LinearLayout
		android:id="@+id/homepage"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#F2F2F2">

		<RelativeLayout
			android:id="@+id/content_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent">


			<RelativeLayout
				android:id="@+id/page_homepage_ek1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<View
					android:id="@+id/_bg__homepage_ek2"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@drawable/_bg__homepage_ek2_shape" />

				<View
					android:id="@+id/rectangle_2_16_ek3"
					android:layout_width="match_parent"
					android:layout_height="166.76dp"
					android:background="@drawable/rectangle_2_16_ek3_shape" />

				<View
					android:id="@+id/ellipse_ek6"
					android:layout_width="204dp"
					android:layout_height="197.78dp"
					android:layout_alignParentEnd="true"
					android:layout_alignParentRight="true"
					android:layout_marginStart="215dp"
					android:layout_marginLeft="16dp"
					android:layout_marginTop="-100dp"
					android:layout_marginEnd="-30dp"
					android:layout_marginRight="-30dp"
					android:alpha="0.15000000596046"
					android:background="@drawable/ellipse_ek6_shape" />

				<View
					android:id="@+id/ellipse_ek7"
					android:layout_width="124dp"
					android:layout_height="120.22dp"
					android:layout_alignParentTop="true"
					android:layout_alignParentEnd="true"
					android:layout_alignParentRight="true"
					android:layout_marginStart="284dp"
					android:layout_marginLeft="16dp"
					android:layout_marginTop="48dp"
					android:layout_marginEnd="-22dp"
					android:layout_marginRight="-22dp"
					android:alpha="0.15000000596046"
					android:background="@drawable/ellipse_ek7_shape" />

				<TextView
					android:id="@+id/hello"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="50dp"
					android:textColor="@color/start_tracking_color"
					android:textSize="15sp"
					android:textStyle="bold" />

				<View
					android:id="@+id/rectangle"
					android:layout_width="329dp"
					android:layout_height="50dp"
					android:layout_marginStart="23dp"
					android:layout_marginLeft="23dp"
					android:layout_marginTop="147dp"
					android:background="@drawable/rectangle_shape" />


				<RelativeLayout
					android:id="@+id/group_4"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="47.99dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="164dp">


					<RelativeLayout
						android:id="@+id/group_2"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp">

						<View
							android:id="@+id/ellipse_ek8"
							android:layout_width="15.05dp"
							android:layout_height="14.95dp"
							android:layout_marginStart="0dp"
							android:layout_marginLeft="0dp"
							android:layout_marginTop="0dp"
							android:background="@drawable/ellipse_ek8_shape" />

						<View
							android:id="@+id/rectangle_2"
							android:layout_width="1.58dp"
							android:layout_height="4.94dp"
							android:layout_marginStart="10dp"
							android:layout_marginLeft="0dp"
							android:layout_marginTop="9dp"
							android:background="@drawable/rectangle_2_shape" />

					</RelativeLayout>

				</RelativeLayout>


				<RelativeLayout
					android:id="@+id/group_11_12"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="650dp">

					<View
						android:id="@+id/rectangle_3"
						android:layout_width="38dp"
						android:layout_height="85dp"
						android:layout_marginStart="0dp"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="30dp"
						android:background="@drawable/rectangle_3_shape" />

					<View
						android:id="@+id/rectangle_3_1"
						android:layout_width="38dp"
						android:layout_height="85dp"
						android:layout_marginStart="338dp"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="30dp"
						android:background="@drawable/rectangle_3_1_shape" />

					<ImageView
						android:id="@+id/union"
						android:layout_width="376dp"
						android:layout_height="115dp"
						android:contentDescription="union"
						android:src="@drawable/union" />

					<RelativeLayout
						android:id="@+id/group_10"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="173dp"
						android:layout_marginLeft="20dp"
						android:layout_marginTop="7dp">


						<RelativeLayout
							android:id="@+id/group_2_2"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="34dp">

							<TextView
								android:id="@+id/home_ek1"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/home_ek1_string"
								android:textColor="@color/ellipse_2_3_color"
								android:textSize="15sp" />

						</RelativeLayout>


						<RelativeLayout
							android:id="@+id/group_8"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content">


							<RelativeLayout
								android:id="@+id/home_ek2"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content">


								<RelativeLayout
									android:id="@+id/group_2_ek1"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:layout_marginTop="0.62dp">


									<RelativeLayout
										android:id="@+id/group_ek1"
										android:layout_width="wrap_content"
										android:layout_height="wrap_content">


										<RelativeLayout
											android:id="@+id/group_ek2"
											android:layout_width="wrap_content"
											android:layout_height="wrap_content">

											<ImageView
												android:id="@+id/vector_ek8"
												android:layout_width="25dp"
												android:layout_height="23.76dp"
												android:contentDescription="vector_ek8"
												android:src="@drawable/vector_ek8" />

										</RelativeLayout>

									</RelativeLayout>

								</RelativeLayout>

							</RelativeLayout>

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

				<ImageButton
					android:id="@+id/_profile"
					android:layout_width="47dp"
					android:layout_height="47dp"
					android:layout_marginStart="303dp"
					android:layout_marginLeft="0dp"
					android:layout_marginTop="700dp"
					android:contentDescription="_profile"
					android:src="@drawable/_profile" />

				<TextView
					android:id="@+id/let_s_learn_more_about_your_food"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="20dp"
					android:layout_marginTop="74dp"
					android:text="@string/let_s_learn_more_about_your_food_string"
					android:textColor="@color/start_tracking_color"
					android:textSize="15sp"
					android:textStyle="bold"/>

				<EditText
					android:id="@+id/search_"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="68dp"
					android:layout_marginTop="150dp"
					android:hint="@string/search__string"
					android:textColor="@color/rectangle_2_color"
					android:textSize="15sp" />


				<RelativeLayout
					android:id="@+id/camera"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="16dp"
					android:layout_marginLeft="16dp"
					android:layout_marginTop="250dp">

					<View
						android:id="@+id/rectangle_2_18"
						android:layout_width="338dp"
						android:layout_height="158dp"
						android:background="@drawable/rectangle_2_18_shape" />

					<ImageView
						android:id="@+id/foodcam_1"
						android:layout_width="335dp"
						android:layout_height="158dp"
						android:contentDescription="foodcam_1"
						android:src="@drawable/foodcam_1" />

					<ImageView
						android:id="@+id/overlay_ek1"
						android:layout_width="338dp"
						android:layout_height="158dp"
						android:alpha="0.60000002384186"
						android:contentDescription="overlay_ek1"
						android:src="@drawable/overlay_ek1" />

					<TextView
						android:id="@+id/track_nutrients_foreach_component_in_your_food"
						android:layout_width="108dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="17dp"
						android:layout_marginTop="36dp"
						android:text="@string/track_nutrients_foreach_component_in_your_food_string"
						android:textColor="@color/please_enter_your_account_here_color"
						android:textSize="15sp" />

					<TextView
						android:id="@+id/food_camera"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="15dp"
						android:layout_marginTop="19dp"
						android:text="@string/food_camera_string"
						android:textColor="@color/start_tracking_color"
						android:textSize="15sp"
						android:textStyle="bold"/>


					<RelativeLayout
						android:id="@+id/group_ek3"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginStart="135dp"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="41dp">


						<RelativeLayout
							android:id="@+id/camera_ek1"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginStart="0dp"
							android:layout_marginLeft="0dp"
							android:layout_marginTop="0dp">

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

				<RelativeLayout
					android:id="@+id/recipe"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="18dp"
					android:layout_marginLeft="18dp"
					android:layout_marginTop="467dp">

					<View
						android:id="@+id/rectangle_2_18_ek1"
						android:layout_width="338dp"
						android:layout_height="158dp"
						android:background="@drawable/rectangle_2_18_ek1_shape" />

					<ImageView
						android:id="@+id/foodcam_1_ek1"
						android:layout_width="335dp"
						android:layout_height="158dp"
						android:contentDescription="foodcam_1_ek1"
						android:src="@drawable/foodcam_1_ek1" />

					<ImageView
						android:id="@+id/overlay_ek2"
						android:layout_width="338dp"
						android:layout_height="158dp"
						android:alpha="0.60000002384186"
						android:contentDescription="overlay_ek2"
						android:src="@drawable/overlay_ek2" />

					<TextView
						android:id="@+id/share_your_own_recipe_and_its_nutrients_facts_with_your_followers"
						android:layout_width="108dp"
						android:layout_height="wrap_content"
						android:layout_marginLeft="17dp"
						android:layout_marginTop="36dp"
						android:text="@string/share_your_own_recipe_and_its_nutrients_facts_with_your_followers_string"
						android:textColor="@color/please_enter_your_account_here_color"
						android:textSize="15sp" />

					<TextView
						android:id="@+id/add_recipe"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginLeft="15dp"
						android:layout_marginTop="19dp"
						android:text="@string/add_recipe_string"
						android:textColor="@color/start_tracking_color"
						android:textSize="15sp"
						android:textStyle="bold"/>

				</RelativeLayout>

			</RelativeLayout>

		</RelativeLayout>

	</LinearLayout>
	</ScrollView>
</LinearLayout>